# django_celere

./: .gitignore  README.md  pyproject.toml
django_celere/: backend_setup.py  cli.py  config_generation.py  django_app_creation.py  frontend_setup.py  project_setup.py  prompts.py  utils.py
django_celere/templates/: Dockerfile.template  Makefile.template  app.css.template  app.js.template  app.ts.template  base.html.template  base_settings.py.template  development_settings.py.template  docker-compose.template  docker-compose_mysql_service.template  docker-compose_mysql_volume.template  docker-compose_postgres_service.template  docs_readme.template  env.template  frontend_readme.template  github_actions.template  gitlab_ci.template  manage.py.template  nginx.conf.template  package.json.template  pre-commit-config.yaml.template  production_settings.py.template  urls.py.template  vite.config.js.template
django_celere/templates/components/: datastar_tailwind_component.template  htmx_alpine_component.template
django_celere/templates/layouts/: app.html.template  base.html.template  guest.html.template  main.html.template
django_celere/tests/: test_cli.py
