[tool.poetry]
name = "django-celere"
version = "0.1.4"
description = "An ultra-fast tool to initialize and structure your Django projects."
authors = ["Guillaume <contact@django-celere.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
typer = "^0.16.0"
jinja2 = "^3.1.6"
questionary = "^2.1.0"

[tool.poetry.scripts]
celere = "django_celere.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["django_celere"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
